src/com/intellij/idea/plugin/hybris/flexibleSearch/FlexibleSearchParser.java
// This is a generated file. Not intended for manual editing.
package com.intellij.idea.plugin.hybris.flexibleSearch;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.intellij.idea.plugin.hybris.flexibleSearch.psi.FlexibleSearchTypes.*;
import static com.intellij.idea.plugin.hybris.flexibleSearch.utils.FlexibleSearchParserUtils.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class FlexibleSearchParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == AGGREGATE_FUNCTION) {
      r = aggregate_function(b, 0);
    }
    else if (t == BETWEEN_PREDICATE) {
      r = between_predicate(b, 0);
    }
    else if (t == BOOLEAN_FACTOR) {
      r = boolean_factor(b, 0);
    }
    else if (t == BOOLEAN_PREDICAND) {
      r = boolean_predicand(b, 0);
    }
    else if (t == BOOLEAN_PRIMARY) {
      r = boolean_primary(b, 0);
    }
    else if (t == BOOLEAN_TERM) {
      r = boolean_term(b, 0);
    }
    else if (t == BOOLEAN_TEST) {
      r = boolean_test(b, 0);
    }
    else if (t == BOOLEAN_VALUE_EXPRESSION) {
      r = boolean_value_expression(b, 0);
    }
    else if (t == CHARACTER_LIKE_PREDICATE) {
      r = character_like_predicate(b, 0);
    }
    else if (t == CHARACTER_PATTERN) {
      r = character_pattern(b, 0);
    }
    else if (t == CHARACTER_STRING_LITERAL) {
      r = character_string_literal(b, 0);
    }
    else if (t == CHARACTER_SUBSTRING_FUNCTION) {
      r = character_substring_function(b, 0);
    }
    else if (t == CHARACTER_VALUE_FUNCTION) {
      r = character_value_function(b, 0);
    }
    else if (t == COLUMN_LOCALIZATION) {
      r = column_localization(b, 0);
    }
    else if (t == COLUMN_REFERENCE) {
      r = column_reference(b, 0);
    }
    else if (t == COMMON_VALUE_EXPRESSION) {
      r = common_value_expression(b, 0);
    }
    else if (t == COMP_OP) {
      r = comp_op(b, 0);
    }
    else if (t == CORRELATION_NAME) {
      r = correlation_name(b, 0);
    }
    else if (t == DERIVED_COLUMN) {
      r = derived_column(b, 0);
    }
    else if (t == EXISTS_PREDICATE) {
      r = exists_predicate(b, 0);
    }
    else if (t == FROM_CLAUSE) {
      r = from_clause(b, 0);
    }
    else if (t == GENERAL_LITERAL) {
      r = general_literal(b, 0);
    }
    else if (t == GENERAL_SET_FUNCTION) {
      r = general_set_function(b, 0);
    }
    else if (t == GROUP_BY_CLAUSE) {
      r = group_by_clause(b, 0);
    }
    else if (t == GROUPING_COLUMN_REFERENCE) {
      r = grouping_column_reference(b, 0);
    }
    else if (t == GROUPING_COLUMN_REFERENCE_LIST) {
      r = grouping_column_reference_list(b, 0);
    }
    else if (t == GROUPING_ELEMENT) {
      r = grouping_element(b, 0);
    }
    else if (t == GROUPING_ELEMENT_LIST) {
      r = grouping_element_list(b, 0);
    }
    else if (t == JOIN_CONDITION) {
      r = join_condition(b, 0);
    }
    else if (t == JOIN_SPECIFICATION) {
      r = join_specification(b, 0);
    }
    else if (t == JOIN_TYPE) {
      r = join_type(b, 0);
    }
    else if (t == JOINED_TABLE) {
      r = joined_table(b, 0);
    }
    else if (t == LIKE_PREDICATE) {
      r = like_predicate(b, 0);
    }
    else if (t == NULL_ORDERING) {
      r = null_ordering(b, 0);
    }
    else if (t == NULL_PREDICATE) {
      r = null_predicate(b, 0);
    }
    else if (t == ORDER_BY_CLAUSE) {
      r = order_by_clause(b, 0);
    }
    else if (t == ORDERING_SPECIFICATION) {
      r = ordering_specification(b, 0);
    }
    else if (t == ORDINARY_GROUPING_SET) {
      r = ordinary_grouping_set(b, 0);
    }
    else if (t == PREDICATE) {
      r = predicate(b, 0);
    }
    else if (t == QUERY_SPECIFICATION) {
      r = query_specification(b, 0);
    }
    else if (t == ROW_VALUE_PREDICAND) {
      r = row_value_predicand(b, 0);
    }
    else if (t == SEARCH_CONDITION) {
      r = search_condition(b, 0);
    }
    else if (t == SELECT_LIST) {
      r = select_list(b, 0);
    }
    else if (t == SELECT_SUBLIST) {
      r = select_sublist(b, 0);
    }
    else if (t == SET_FUNCTION_TYPE) {
      r = set_function_type(b, 0);
    }
    else if (t == SET_QUANTIFIER) {
      r = set_quantifier(b, 0);
    }
    else if (t == SORT_KEY) {
      r = sort_key(b, 0);
    }
    else if (t == SORT_SPECIFICATION) {
      r = sort_specification(b, 0);
    }
    else if (t == SORT_SPECIFICATION_LIST) {
      r = sort_specification_list(b, 0);
    }
    else if (t == STRING_VALUE_EXPRESSION) {
      r = string_value_expression(b, 0);
    }
    else if (t == STRING_VALUE_FUNCTION) {
      r = string_value_function(b, 0);
    }
    else if (t == SUBQUERY) {
      r = subquery(b, 0);
    }
    else if (t == TABLE_EXPRESSION) {
      r = table_expression(b, 0);
    }
    else if (t == TABLE_NAME) {
      r = table_name(b, 0);
    }
    else if (t == TABLE_PRIMARY) {
      r = table_primary(b, 0);
    }
    else if (t == TABLE_REFERENCE) {
      r = table_reference(b, 0);
    }
    else if (t == TABLE_REFERENCE_LIST) {
      r = table_reference_list(b, 0);
    }
    else if (t == TABLE_SUBQUERY) {
      r = table_subquery(b, 0);
    }
    else if (t == TRUTH_VALUE) {
      r = truth_value(b, 0);
    }
    else if (t == VALUE_EXPRESSION) {
      r = value_expression(b, 0);
    }
    else if (t == WHERE_CLAUSE) {
      r = where_clause(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return flexibleSearchFile(b, l + 1);
  }

  /* ********************************************************** */
  // COUNT LEFT_PAREN ASTERISK RIGHT_PAREN 
  // 	|	general_set_function
  public static boolean aggregate_function(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregate_function")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AGGREGATE_FUNCTION, "<aggregate function>");
    r = parseTokens(b, 0, COUNT, LEFT_PAREN, ASTERISK, RIGHT_PAREN);
    if (!r) r = general_set_function(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // row_value_predicand [ NOT ] BETWEEN row_value_predicand AND row_value_predicand
  public static boolean between_predicate(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "between_predicate")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BETWEEN_PREDICATE, "<between predicate>");
    r = row_value_predicand(b, l + 1);
    r = r && between_predicate_1(b, l + 1);
    r = r && consumeToken(b, BETWEEN);
    r = r && row_value_predicand(b, l + 1);
    r = r && consumeToken(b, AND);
    r = r && row_value_predicand(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [ NOT ]
  private static boolean between_predicate_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "between_predicate_1")) return false;
    consumeToken(b, NOT);
    return true;
  }

  /* ********************************************************** */
  // [ NOT ] boolean_test
  public static boolean boolean_factor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_factor")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_FACTOR, "<boolean factor>");
    r = boolean_factor_0(b, l + 1);
    r = r && boolean_test(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [ NOT ]
  private static boolean boolean_factor_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_factor_0")) return false;
    consumeToken(b, NOT);
    return true;
  }

  /* ********************************************************** */
  // parenthesized_boolean_value_expression | nonparenthesized_value_expression_primary
  public static boolean boolean_predicand(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_predicand")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_PREDICAND, "<boolean predicand>");
    r = parenthesized_boolean_value_expression(b, l + 1);
    if (!r) r = nonparenthesized_value_expression_primary(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // boolean_predicand | predicate
  public static boolean boolean_primary(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_primary")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_PRIMARY, "<boolean primary>");
    r = boolean_predicand(b, l + 1);
    if (!r) r = predicate(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // boolean_factor (((AND|OR) boolean_term)*)?
  public static boolean boolean_term(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_term")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_TERM, "<boolean term>");
    r = boolean_factor(b, l + 1);
    p = r; // pin = 1
    r = r && boolean_term_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (((AND|OR) boolean_term)*)?
  private static boolean boolean_term_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_term_1")) return false;
    boolean_term_1_0(b, l + 1);
    return true;
  }

  // ((AND|OR) boolean_term)*
  private static boolean boolean_term_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_term_1_0")) return false;
    int c = current_position_(b);
    while (true) {
      if (!boolean_term_1_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "boolean_term_1_0", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // (AND|OR) boolean_term
  private static boolean boolean_term_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_term_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = boolean_term_1_0_0_0(b, l + 1);
    r = r && boolean_term(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // AND|OR
  private static boolean boolean_term_1_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_term_1_0_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    if (!r) r = consumeToken(b, OR);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // boolean_primary  [ IS [ NOT ] truth_value ]
  public static boolean boolean_test(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_test")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_TEST, "<boolean test>");
    r = boolean_primary(b, l + 1);
    r = r && boolean_test_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [ IS [ NOT ] truth_value ]
  private static boolean boolean_test_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_test_1")) return false;
    boolean_test_1_0(b, l + 1);
    return true;
  }

  // IS [ NOT ] truth_value
  private static boolean boolean_test_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_test_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IS);
    r = r && boolean_test_1_0_1(b, l + 1);
    r = r && truth_value(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [ NOT ]
  private static boolean boolean_test_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_test_1_0_1")) return false;
    consumeToken(b, NOT);
    return true;
  }

  /* ********************************************************** */
  // boolean_term
  public static boolean boolean_value_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_value_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_VALUE_EXPRESSION, "<boolean value expression>");
    r = boolean_term(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // row_value_predicand [ NOT ] LIKE (character_pattern | value_expression)
  public static boolean character_like_predicate(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "character_like_predicate")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CHARACTER_LIKE_PREDICATE, "<character like predicate>");
    r = row_value_predicand(b, l + 1);
    r = r && character_like_predicate_1(b, l + 1);
    r = r && consumeToken(b, LIKE);
    r = r && character_like_predicate_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [ NOT ]
  private static boolean character_like_predicate_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "character_like_predicate_1")) return false;
    consumeToken(b, NOT);
    return true;
  }

  // character_pattern | value_expression
  private static boolean character_like_predicate_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "character_like_predicate_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = character_pattern(b, l + 1);
    if (!r) r = value_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // STRING | string_value_function
  public static boolean character_pattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "character_pattern")) return false;
    if (!nextTokenIs(b, "<character pattern>", CONCAT, STRING)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CHARACTER_PATTERN, "<character pattern>");
    r = consumeToken(b, STRING);
    if (!r) r = string_value_function(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // STRING
  public static boolean character_string_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "character_string_literal")) return false;
    if (!nextTokenIs(b, STRING)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STRING);
    exit_section_(b, m, CHARACTER_STRING_LITERAL, r);
    return r;
  }

  /* ********************************************************** */
  // CONCAT LEFT_PAREN string_value_expression COMMA  (character_substring_function | string_value_expression) RIGHT_PAREN
  public static boolean character_substring_function(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "character_substring_function")) return false;
    if (!nextTokenIs(b, CONCAT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CONCAT, LEFT_PAREN);
    r = r && string_value_expression(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && character_substring_function_4(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, CHARACTER_SUBSTRING_FUNCTION, r);
    return r;
  }

  // character_substring_function | string_value_expression
  private static boolean character_substring_function_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "character_substring_function_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = character_substring_function(b, l + 1);
    if (!r) r = string_value_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // character_substring_function
  public static boolean character_value_function(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "character_value_function")) return false;
    if (!nextTokenIs(b, CONCAT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = character_substring_function(b, l + 1);
    exit_section_(b, m, CHARACTER_VALUE_FUNCTION, r);
    return r;
  }

  /* ********************************************************** */
  // LEFT_BRACKET IDENTIFIER RIGHT_BRACKET
  public static boolean column_localization(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_localization")) return false;
    if (!nextTokenIs(b, LEFT_BRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LEFT_BRACKET, IDENTIFIER, RIGHT_BRACKET);
    exit_section_(b, m, COLUMN_LOCALIZATION, r);
    return r;
  }

  /* ********************************************************** */
  // identifier_chain
  public static boolean column_reference(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_reference")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COLUMN_REFERENCE, "<column reference>");
    r = identifier_chain(b, l + 1);
    exit_section_(b, l, m, r, false, column_reference_recover_parser_);
    return r;
  }

  /* ********************************************************** */
  // !(<<eof>> | IDENTIFIER | LINE_TERMINATOR | RIGHT_BRACE | FROM | LEFT_BRACKET | SEMICOLON | WHITE_SPACE | AND | ORDER | IS | OR)
  static boolean column_reference_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_reference_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !column_reference_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // <<eof>> | IDENTIFIER | LINE_TERMINATOR | RIGHT_BRACE | FROM | LEFT_BRACKET | SEMICOLON | WHITE_SPACE | AND | ORDER | IS | OR
  private static boolean column_reference_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_reference_recover_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = eof(b, l + 1);
    if (!r) r = consumeToken(b, IDENTIFIER);
    if (!r) r = consumeToken(b, LINE_TERMINATOR);
    if (!r) r = consumeToken(b, RIGHT_BRACE);
    if (!r) r = consumeToken(b, FROM);
    if (!r) r = consumeToken(b, LEFT_BRACKET);
    if (!r) r = consumeToken(b, SEMICOLON);
    if (!r) r = consumeToken(b, WHITE_SPACE);
    if (!r) r = consumeToken(b, AND);
    if (!r) r = consumeToken(b, ORDER);
    if (!r) r = consumeToken(b, IS);
    if (!r) r = consumeToken(b, OR);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LEFT_BRACE column_reference column_localization? RIGHT_BRACE
  static boolean column_reference_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_reference_value")) return false;
    if (!nextTokenIs(b, LEFT_BRACE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, LEFT_BRACE);
    p = r; // pin = 1
    r = r && report_error_(b, column_reference(b, l + 1));
    r = p && report_error_(b, column_reference_value_2(b, l + 1)) && r;
    r = p && consumeToken(b, RIGHT_BRACE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // column_localization?
  private static boolean column_reference_value_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_reference_value_2")) return false;
    column_localization(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // string_value_expression
  public static boolean common_value_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "common_value_expression")) return false;
    if (!nextTokenIs(b, STRING)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = string_value_expression(b, l + 1);
    exit_section_(b, m, COMMON_VALUE_EXPRESSION, r);
    return r;
  }

  /* ********************************************************** */
  // EQUALS_OPERATOR
  // 	|	GREATER_THAN_OPERATOR
  // 	|	NOT_EQUALS_OPERATOR
  // 	|	LESS_THAN_OPERATOR
  // 	|	LESS_THAN_OR_EQUALS_OPERATOR
  // 	|	GREATER_THAN_OR_EQUALS_OPERATOR
  public static boolean comp_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comp_op")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMP_OP, "<comp op>");
    r = consumeToken(b, EQUALS_OPERATOR);
    if (!r) r = consumeToken(b, GREATER_THAN_OPERATOR);
    if (!r) r = consumeToken(b, NOT_EQUALS_OPERATOR);
    if (!r) r = consumeToken(b, LESS_THAN_OPERATOR);
    if (!r) r = consumeToken(b, LESS_THAN_OR_EQUALS_OPERATOR);
    if (!r) r = consumeToken(b, GREATER_THAN_OR_EQUALS_OPERATOR);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
